--- a/packages/admin-dashboard/src/root.css
+++ b/packages/admin-dashboard/src/root.css
@@ -87,7 +87,7 @@
     @apply border-border;
   }
   body {
-    @apply box-border bg-background text-foreground;
+    @apply bg-background text-foreground box-border;
   }
 }
 
@@ -111,7 +111,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  @apply relative rounded-full bg-border;
+  @apply bg-border relative rounded-full;
 }
 
 *::-webkit-scrollbar-track {
