--- a/packages/admin-dashboard/src/root.css
+++ b/packages/admin-dashboard/src/root.css
@@ -37,6 +37,8 @@
     --warning: 38 92% 50%;
     --warning-foreground: 48 96% 89%;
 
+    --navigation-link: 240 10% 3.9%;
+
     --topbar-height: 70px;
     --topbar-height-lg: 80px;
 
@@ -79,9 +81,10 @@
 
     --warning: 48 96% 89%;
     --warning-foreground: 38 92% 50%;
+
+    --navigation-link: 0 0% 98%;
   }
 }
-
 @layer base {
   * {
     @apply border-border;
